# rust

boolandchar/: Cargo.toml
boolandchar/src/: main.rs
facemash/: .env  Cargo.toml
facemash/src/: main.rs
facemash/src/algorithm/: elo_rating.rs  k_factor.rs  mod.rs
facemash/src/controller/: face_info_controller.rs  file_controller.rs  mod.rs
facemash/src/dao/: face_info_dao.rs  file_resource_dao.rs  mod.rs  rating_log_dao.rs
facemash/src/entity/: face_info.rs
facemash/src/logger/: mod.rs
facemash/src/resource/: id_generate.rs  mod.rs  mongo.rs
facemash/src/service/: face_info_service.rs  file_resource_service.rs  mod.rs
first_rust/: .env  Cargo.toml
first_rust/src/: db.rs  error_handler.rs  main.rs  schema.rs
first_rust/src/employees/: mod.rs  models.rs  routes.rs
function/src/: main.rs
guessing_game/src/: main.rs
hello/src/: lib.rs
minigrep/src/: lib.rs  main.rs
module/: Cargo.toml
module/mylib/src/: lib.rs
module/src/: main.rs
ownership/src/: main.rs
rectangles/src/: main.rs
slice/src/: main.rs
structs/src/: main.rs
thread/: Cargo.toml
thread/src/: main.rs
variables/src/: main.rs
